--- a/css/fixedHeader.bootstrap5.css
+++ b/css/fixedHeader.bootstrap5.css
@@ -14,3 +14,7 @@ table.dataTable.fixedHeader-locked {
     display: none;
   }
 }
+html[data-bs-theme=dark] table.dataTable.fixedHeader-floating,
+html[data-bs-theme=dark] table.dataTable.fixedHeader-locked {
+  background-color: var(--bs-body-bg);
+}
